<resources>
    <string name="app_name">Spider Attack</string>
    <string name="signin_other_error">There was an issue with sign in, please try again later</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id">ca-app-pub-5934924366370104/7670297279</string>
    <string name="mixpanel_token">f3324dff1554582420f2858e546e10d1</string>
    <string name="replay_text">Replay</string>
    <string name="resume_text">Resume</string>
    <string name="ready_text">Ready?</string>
    <string name="sign_in_text">Sign In for Leaderboard</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="left_text">Left</string>
    <string name="right_text">Right</string>
    <string name="time_elapsed_text">SCORE- </string>
    <string name="leaderboard_text">Leaderboard</string>
    <string name="high_score_text">High</string>
    <string name="cur_score_text">Score</string>
    <string name="game_over_text">Game Over</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
