<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    android:id="@+id/scoreboard_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@android:color/white"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/scoreboard_score_label_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/scoreboard_cur_score_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cur_score_text"
            android:textSize="21sp"/>

        <TextView
            android:id="@+id/scoreboard_high_score_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/high_score_text"
            android:textSize="21sp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/scoreboard_score_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoreboard_score_label_layout">

        <TextView
            android:id="@+id/scoreboard_cur_score_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:textSize="28sp"/>

        <TextView
            android:id="@+id/scoreboard_high_score_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:textSize="28sp"/>
    </LinearLayout>


    <Button
        android:id="@+id/scoreboard_play_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoreboard_score_text_layout"
        android:text="@string/resume_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        app:layout_widthPercent="48%"/>

    <Button
        android:id="@+id/scoreboard_siginout_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoreboard_play_button"
        android:text="@string/sign_out_text"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_widthPercent="48%"/>

    <!-- sign-in button -->
    <Button
        android:id="@+id/scoreboard_siginin_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/scoreboard_play_button"
        app:layout_widthPercent="48%"/>

    <Button
        android:id="@+id/scoreboard_leaderboard_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/scoreboard_siginout_button"
        android:layout_below="@id/scoreboard_play_button"
        android:text="@string/leaderboard_text"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_widthPercent="48%"/>
</android.support.percent.PercentRelativeLayout>